use constant for UTF-8