@@ -51,7 +51,7 @@ class HtmlListingResponse extends AbstractBasicResponse {
     @Override
     protected void write0(final WebDavResponse response) throws IOException {
         response.setStatus(WebDavResponse.Status.SC_OK);
-        response.setCharacterEncoding("UTF-8"); // FIXME
+        response.setCharacterEncoding(UTF_8);
         response.setContentType("text/html");
 
         final PrintWriter writer = new PrintWriter(response.getOutputStream());
@@ -78,7 +78,7 @@ class HtmlListingResponse extends AbstractBasicResponse {
         Collections.sort(entities);
         for (final WebDavEntity entity : entities) {
             final String entityName = entity.getName();
-            final String link = URLEncoder.encode(entityName, "UTF-8"); // FIXME
+            final String link = URLEncoder.encode(entityName, UTF_8);
             final String entityNameHtml = StringEscapeUtils.escapeHtml4(entityName);
             if (WebDavEntity.Type.COLLECTION == entity.getType()) {
                 writer.print("<tr class=\"folder\"><td colspan=\"3\"><a href=\"./");
